# tmux-wrangler

./: .gitignore  README.md  flake.nix  mypy.ini  pyproject.toml
scripts/: lint.py
src/cli/: cli.py
